# hft-benchmarks

./: .gitignore  BENCHMARKING_GUIDE.md  BENCHMARK_ROADMAP.md  Cargo.toml  LICENSE.md  QUICK_REFERENCE.md  README.md
benches/: memory_bench.rs  server_timing_bench.rs  timing_bench.rs
examples/: custom_benchmark.rs  memory_benchmarks.rs  real_comparison.rs  simple_benchmark_example.rs
src/: allocation.rs  calibration.rs  desktop_config.rs  environment.rs  lib.rs  mock_core.rs  server_config.rs  stats.rs  timing.rs
