[package]
name = "hft-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["HFT Framework Team <hft@rustquant.tech>"]
description = "High-precision benchmarking tools for high-frequency trading systems with nanosecond-level timing accuracy"
license = "GPL-3.0-or-later"
repository = "https://github.com/hft-framework/hft-benchmarks"
homepage = "https://github.com/hft-framework/hft-benchmarks"
documentation = "https://docs.rs/hft-benchmarks"
keywords = ["benchmark", "hft", "trading", "performance", "timing"]
categories = ["development-tools::profiling", "algorithms", "finance"]
readme = "README.md"
exclude = ["BENCHMARKING_GUIDE.md", "BENCHMARK_ROADMAP.md", "QUICK_REFERENCE.md", "benches/"]

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
jemallocator = "0.5"
libc = "0.2"
ahash = "0.8"
lockfree = "0.5"
num_cpus = "1.16"
fastrand = "2.0"

[lib]
bench = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "timing_bench"
harness = false

[[bench]]
name = "server_timing_bench"
harness = false

[[example]]
name = "simple_benchmark_example"
path = "examples/simple_benchmark_example.rs"

[[example]]
name = "memory_benchmarks"
path = "examples/memory_benchmarks.rs"

[[example]]
name = "real_comparison"
path = "examples/real_comparison.rs"

[[example]]
name = "custom_benchmark"
path = "examples/custom_benchmark.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false

# Custom profile for benchmarking
[profile.bench]
inherits = "release"
debug = true  # Keep symbols for profiling
